<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rsa"
            android:icon="@drawable/alghoritm"
            android:title="@string/menu_rsa" />
        <item
            android:id="@+id/nav_rc4"
            android:icon="@drawable/alghoritm"
            android:title="@string/menu_rc4" />
        <item
            android:id="@+id/nav_elgamal"
            android:icon="@drawable/alghoritm"
            android:title="@string/menu_elgamal" />
        <item
            android:id="@+id/nav_diffie_hellman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/alghoritm"
            android:title="@string/menu_diffie_hellman" />
    </group>
</menu>